--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-box">
-      <a class="header-link animate__animated animate__bounceInLeft" href="./index.html"
-        ><img class="header-img" src="./img/interno.png" alt="Interno"
+      <div class="container header__box">
+      <a class="header__link animate__animated animate__bounceInLeft" href="./index.html"
+        ><img class="header__img" src="./img/interno.png" alt="Interno"
       /></a>
-      <nav class="header-nav">
-        <ul class="nav-list">
-          <li class="nav-item animate__animated animate__bounceInDown"><a class="nav-link active" href="./index.html"></a>Home</li>
-          <li class="nav-item animate__animated animate__bounceInDown"><a class="nav-link" href="#"></a>About Us</li>
-          <li class="nav-item animate__animated animate__bounceInDown"><a class="nav-link" href="#"></a>Services</li>
-          <li class="nav-item animate__animated animate__bounceInDown"><a class="nav-link" href="#"></a>Pages</li>
-          <li class="nav-item animate__animated animate__bounceInDown"><a class="nav-link" href="#"></a>Contact Us</li>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__item animate__animated animate__bounceInDown"><a class="header__link active" href="./index.html"></a>Home</li>
+          <li class="header__item animate__animated animate__bounceInDown"><a class="header__link" href="#"></a>About Us</li>
+          <li class="header__item animate__animated animate__bounceInDown"><a class="header__link" href="#"></a>Services</li>
+          <li class="header__item animate__animated animate__bounceInDown"><a class="header__link" href="#"></a>Pages</li>
+          <li class="header__item animate__animated animate__bounceInDown"><a class="header__link" href="#"></a>Contact Us</li>
         </ul>
       </nav>
     </div>
     </header>
-    <main class="main">
-      <section class="main-hero">
+    <main>
+      <section class="main">
         <div class="container">
-        <h1 class="hero-title animate__animated animate__pulse">Let's Create Your Dream Interior</h1>
-        <p class="hero-text animate__animated animate__pulse">
+        <h1 class="main__title animate__animated animate__pulse">Let's Create Your Dream Interior</h1>
+        <p class="main__text animate__animated animate__pulse">
           The world needs innovators and problem solvers who turn
         </p>
-        <p class="hero-text animate__animated animate__pulse">challenges into greater opportunities.</p>
-        <button type="button" class="hero-button animate__animated animate__bounce">Get Started</button>
+        <p class="main__text animate__animated animate__pulse">challenges into greater opportunities.</p>
+        <button type="button" class="main__button animate__animated animate__bounce">Get Started</button>
       </div>
       </section>
       <section class="main-information" data-aos="fade-up">
